feat(outlook): Добавляет модуль скачивания выписок из ЕГРН по письмам Росреестра в Outlook
Модуль автоматизирует процесс скачивания выписок из ЕГРН на основе писем, содержащих ссылку для скачивания, которые Росреестр рассылает на электронную почту по результатам обработки запроса.
Автоматизация осуществлена на базе Outlook

--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,8 @@ name = "pypi"
 openpyxl = "*"
 selenium = "*"
 webdriver-manager = "*"
+pywin32 = "*"
+httpx = "~=0.18"
 
 [dev-packages]
 mypy = "*"
